# LogicArena

./: README.md
backend/: .env.example  .gitignore  docker-compose.yml  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1f4415891af2_add_circuittopology_table.py  4a48a3e95445_create_users_table.py  9340105d4a8e_rename_to_mode2circuittopology.py  adaa366e30a9_add_matches_table.py  c14e450938fc_add_mode3_puzzle_metadata_and_.py  d91c002c3b39_add_mode3puzzle_table.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  auth.py  health.py  users.py
backend/app/config/: __init__.py  database.py  redis.py  settings.py
backend/app/core/: __init__.py  exceptions.py  logging.py  security.py  websocket.py
backend/app/engine/: __init__.py  elo.py  mode1_logic_engine.py  mode2_logic_engine.py  mode3_logic_engine.py
backend/app/models/: __init__.py  daily_puzzle_attempt.py  match.py  mode2_topology.py  mode3_puzzle.py  user.py
backend/app/routes/: __init__.py  arena.py  daily.py  leaderboard.py  mode3_practice.py  practice.py
backend/app/scripts/: __init__.py  generate_mode2_topologies.py  seed_mode3.py
backend/app/services/: bot_service.py  cleanup.py  daily_service.py  elo_service.py  game_service.py  match_manager.py  matchmaker.py  mode3_match_manager.py  name_generator.py
frontend/: .env  .gitignore  eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: CircuitRenderer.jsx  CrosswordGrid.jsx  Sidebar.jsx  (+2 more)
(+14 files in other folders)
