[project]
name = "logicarena-backend"
version = "0.1.0"
description = "LogicArena — Real-time competitive multiplayer Boolean algebra platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # Database
    "sqlalchemy>=2.0.30",
    "sqlmodel>=0.0.16",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # Redis
    "redis[hiredis]>=5.0.0",
    # Auth & Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    # Config
    "pydantic-settings>=2.2.0",
    # Logging
    "loguru>=0.7.0",
    # WebSocket (included via uvicorn[standard] but listed explicitly)
    "websockets>=12.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
